--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "spry tools",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,14 @@
   "bugs": {
     "url": "https://github.com/wangcylive/spry-tools/issues"
   },
-  "homepage": "https://github.com/wangcylive/spry-tools#readme"
+  "homepage": "https://github.com/wangcylive/spry-tools#readme",
+  "dependencies": {
+    "@babel/polyfill": "^7.2.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0"
+  }
 }
