--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/wangcylive/spry-tools#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5"
+    "@babel/polyfill": "^7.2.5",
+    "exif-js": "^2.3.0",
+    "spark-md5": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
