--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "webpack-dev-server --config ./config/webpack.dev.js --hot",
     "build": "webpack --config ./config/webpack.prod.js",
-    "test": "jest"
+    "test": "jest -u"
   },
   "repository": {
     "type": "git",
@@ -27,13 +27,12 @@
   "homepage": "https://github.com/wangcylive/spry-tools#readme",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
-    "exif-js": "^2.3.0",
-    "spark-md5": "^3.0.0",
     "@hot-loader/react-dom": "npm:@hot-loader/react-dom",
     "antd": "^3.22.1",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "core-js": "3.2.1",
+    "exif-js": "^2.3.0",
     "github-markdown-css": "^3.0.1",
     "history": "^4.9.0",
     "prop-types": "^15.6.2",
@@ -47,6 +46,7 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "spark-md5": "^3.0.0",
     "url-search-params-polyfill": "^7.0.0",
     "use-react-router": "^1.0.7"
   },
@@ -98,12 +98,14 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/classnames": "^2.2.9",
+    "@types/jest": "^26.0.23",
     "@types/qrcode": "^1.3.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.5",
+    "@types/react-test-renderer": "^17.0.1",
     "autoprefixer": "^9.6.1",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
@@ -127,6 +129,7 @@
     "postcss-loader": "^3.0.0",
     "postcss-pxtorem": "^4.0.1",
     "react-hot-loader": "^4.12.11",
+    "react-test-renderer": "^17.0.2",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^1.4.1",
