--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "./src/index.js",
   "serverPort": 21001,
   "scripts": {
-    "start": "webpack-dev-server --config ./config/webpack.dev.js --hot",
-    "build": "webpack --config ./config/webpack.prod.js",
-    "test": "jest -u"
+    "start": "cross-env NODE_ENV=development webpack server --config ./config/webpack.dev.js",
+    "dev": "yarn run start",
+    "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.js",
+    "test": "jest -u",
+    "npxbabel": "npx babel ./src/index.ts --out-file ./src/script-compiled.js"
   },
   "repository": {
     "type": "git",
@@ -26,124 +28,89 @@
   },
   "homepage": "https://github.com/wangcylive/spry-tools#readme",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@hot-loader/react-dom": "npm:@hot-loader/react-dom",
-    "antd": "^3.22.1",
-    "axios": "^0.19.0",
+    "@babel/runtime": "^7.14.8",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
-    "core-js": "3.2.1",
     "exif-js": "^2.3.0",
-    "github-markdown-css": "^3.0.1",
-    "history": "^4.9.0",
-    "prop-types": "^15.6.2",
+    "github-markdown-css": "^4.0.0",
+    "history": "4.10.1",
     "qrcode": "^1.4.1",
-    "react": "^16.9.0",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-loadable": "^5.5.0",
-    "react-markdown": "^4.1.0",
+    "react-markdown": "^6.0.2",
     "react-redux": "^7.1.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "spark-md5": "^3.0.0",
-    "url-search-params-polyfill": "^7.0.0",
-    "use-react-router": "^1.0.7"
+    "spark-md5": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-async-generator-functions": "^7.1.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.1.2",
-    "@babel/plugin-proposal-do-expressions": "^7.5.0",
-    "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/plugin-proposal-export-namespace-from": "^7.5.2",
-    "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.5.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-async-generators": "^7.0.0",
-    "@babel/plugin-syntax-class-properties": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-function-bind": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/plugin-transform-arrow-functions": "^7.0.0",
-    "@babel/plugin-transform-block-scoped-functions": "^7.0.0",
-    "@babel/plugin-transform-block-scoping": "^7.5.5",
-    "@babel/plugin-transform-classes": "^7.5.5",
-    "@babel/plugin-transform-computed-properties": "^7.0.0",
-    "@babel/plugin-transform-destructuring": "^7.5.0",
-    "@babel/plugin-transform-duplicate-keys": "^7.5.0",
-    "@babel/plugin-transform-for-of": "^7.0.0",
-    "@babel/plugin-transform-function-name": "^7.1.0",
-    "@babel/plugin-transform-instanceof": "^7.5.5",
-    "@babel/plugin-transform-literals": "^7.0.0",
-    "@babel/plugin-transform-new-target": "^7.0.0",
-    "@babel/plugin-transform-object-super": "^7.5.5",
-    "@babel/plugin-transform-parameters": "^7.1.0",
-    "@babel/plugin-transform-regenerator": "^7.4.5",
-    "@babel/plugin-transform-shorthand-properties": "^7.0.0",
-    "@babel/plugin-transform-spread": "^7.0.0",
-    "@babel/plugin-transform-sticky-regex": "^7.0.0",
-    "@babel/plugin-transform-template-literals": "^7.0.0",
-    "@babel/plugin-transform-typeof-symbol": "^7.0.0",
-    "@babel/plugin-transform-unicode-regex": "^7.0.0",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.14.8",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@types/classnames": "^2.2.9",
     "@types/jest": "^26.0.23",
     "@types/qrcode": "^1.3.4",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
     "@types/react-redux": "^7.1.2",
     "@types/react-router": "^5.0.3",
-    "@types/react-router-dom": "^4.3.5",
+    "@types/react-router-dom": "^5.1.8",
     "@types/react-test-renderer": "^17.0.1",
-    "autoprefixer": "^9.6.1",
-    "babel-jest": "^24.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "autoprefixer": "^10.3.1",
+    "babel-jest": "^27.0.6",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.0",
     "browserslist": "^4.6.6",
-    "clean-webpack-plugin": "^3.0.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "connect-history-api-fallback": "^1.6.0",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
-    "css-modules-typescript-loader": "^3.0.0",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "copy-webpack-plugin": "^9.0.1",
+    "core-js": "^3.15.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.2.0",
+    "css-modules-typescript-loader": "^4.0.1",
+    "eslint": "^7.31.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "express": "^4.17.1",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.9.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.9.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "postcss-pxtorem": "^4.0.1",
-    "react-hot-loader": "^4.12.11",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "internal-ip": "^6.2.0",
+    "jest": "^27.0.6",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
+    "mini-css-extract-plugin": "^2.1.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "postcss-loader": "^6.1.1",
+    "postcss-pxtorem": "^6.0.0",
+    "prettier": "^2.3.2",
     "react-test-renderer": "^17.0.2",
-    "sass-loader": "^7.3.1",
-    "style-loader": "^1.0.0",
-    "terser-webpack-plugin": "^1.4.1",
-    "ts-loader": "^6.0.4",
-    "tslint": "^5.19.0",
+    "regenerator-runtime": "^0.13.9",
+    "sass": "^1.36.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "terser-webpack-plugin": "^5.1.4",
+    "ts-loader": "^9.2.4",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-eslint-rules": "^5.4.0",
-    "tslint-react": "^4.0.0",
+    "tslint-react": "^5.0.0",
     "tslint-react-hooks": "^2.2.1",
-    "typescript": "^3.5.3",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
+    "typescript": "^4.3.5",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.8.0",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^5.8.0"
   }
 }
